# chocochoco

./: .env.example  .gitignore  DESIGN.md  LICENSE  PR_NOTE.md  README.md  SPRINT_PLAN.md  SPRINT_PLAN_S3.md  UI_BUILD_PROGRESS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temp_pkg_patch.json
contracts/: .gitignore  Anchor.toml  COMMITMENT_HASH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  foundry.toml  package.json  tsconfig.json
contracts/programs/chocochoco/: Cargo.toml
contracts/programs/chocochoco/src/: lib.rs
docs/: ANCHOR_IMPLEMENTATION_SUMMARY.md  CLAIM-QUICK-REFERENCE.md  COUNTDOWN-GUIDE.md  S1.8-IMPLEMENTATION.md  S1.9-COUNTDOWN-QUICK-REF.md  S2.4-IMPLEMENTATION.md  S2.5-IMPLEMENTATION.md  SOLANA_MIGRATION.md  time.md
frontend/: .env.example  CHANGELOG_INTEGRATION.md  DEPLOY.md  FOOD_TOKEN_INTEGRATION.md  INTEGRATION_SUMMARY.md  LEADERBOARD_SIMULATOR_INTEGRATION.md  LEADERBOARD_UI_FEATURES.md  PERFORMANCE_GUIDE.md  QUICK_START_SIMULATOR_LEADERBOARD.md  README.md  SIMULATOR_AUTO_REFRESH.md  SIMULATOR_GUIDE.md  eslint.config.js  index.html  package.json  prettier.config.cjs  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo
indexer/: .dockerignore  .env.example  .gitignore  DATABASE_SETUP.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  package.json  schema-sqlite.sql  schema.sql  setup-db-fixed.ps1  setup-db-windows.ps1  setup-db.ps1  tsconfig.json
scripts/: README.md  create_chocochoco_pr.sh  deploy-testnet.sh  env.example  print-latest-deploy.mjs  verify.sh  (+4 more)
(+196 files in other folders)
