[package]
name = "chocochoco-game"
version = "0.1.0"
description = "ChocoChoco - On-chain minority game with commit-reveal"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chocochoco_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
